// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table cell test 1`] = `
<td
  class="jsde-table-cell"
>
  t1
</td>
`;

exports[`Table cell test 2`] = `
<td
  class="jsde-table-cell"
>
  t2
</td>
`;

exports[`Table row test 1`] = `
<tr
  class="jsde-table-row"
>
  <td
    class="jsde-table-cell"
  >
    t1
  </td>
  <td
    class="jsde-table-cell"
  >
    t2
  </td>
</tr>
`;

exports[`Table row test 2`] = `
<tr
  class="jsde-table-row"
>
  <td
    class="jsde-table-cell"
  >
    t3
  </td>
  <td
    class="jsde-table-cell"
  >
    t2
  </td>
</tr>
`;

exports[`Table test 1`] = `
<table
  class="jsde-table"
>
  <thead
    class="jsde-table-head"
  >
    <tr>
      <th>
        f1
      </th>
      <th>
        f2
      </th>
      <th>
        f3
      </th>
    </tr>
  </thead>
  <tbody
    class="jsde-table-body"
  >
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        1
      </td>
      <td
        class="jsde-table-cell"
      >
        one
      </td>
      <td
        class="jsde-table-cell"
      >
        first
      </td>
    </tr>
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        2
      </td>
      <td
        class="jsde-table-cell"
      >
        two
      </td>
      <td
        class="jsde-table-cell"
      >
        second
      </td>
    </tr>
  </tbody>
  <tfoot
    class="jsde-table-foot"
  >
    <tr>
      <td>
        <button>
          Load more data...
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`table test - load more: After render 1`] = `
<table
  class="jsde-table"
>
  <thead
    class="jsde-table-head"
  >
    <tr>
      <th>
        f1
      </th>
      <th>
        f2
      </th>
      <th>
        f3
      </th>
    </tr>
  </thead>
  <tbody
    class="jsde-table-body"
  >
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        1
      </td>
      <td
        class="jsde-table-cell"
      >
        one
      </td>
      <td
        class="jsde-table-cell"
      >
        first
      </td>
    </tr>
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        2
      </td>
      <td
        class="jsde-table-cell"
      >
        two
      </td>
      <td
        class="jsde-table-cell"
      >
        second
      </td>
    </tr>
  </tbody>
  <tfoot
    class="jsde-table-foot"
  >
    <tr>
      <td>
        <button>
          Load more data...
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`table test - load more: Load more 1`] = `
<table
  class="jsde-table"
>
  <thead
    class="jsde-table-head"
  >
    <tr>
      <th>
        f1
      </th>
      <th>
        f2
      </th>
      <th>
        f3
      </th>
    </tr>
  </thead>
  <tbody
    class="jsde-table-body"
  >
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        1
      </td>
      <td
        class="jsde-table-cell"
      >
        one
      </td>
      <td
        class="jsde-table-cell"
      >
        first
      </td>
    </tr>
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        2
      </td>
      <td
        class="jsde-table-cell"
      >
        two
      </td>
      <td
        class="jsde-table-cell"
      >
        second
      </td>
    </tr>
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        5
      </td>
      <td
        class="jsde-table-cell"
      >
        one
      </td>
      <td
        class="jsde-table-cell"
      >
        first
      </td>
    </tr>
    <tr
      class="jsde-table-row"
    >
      <td
        class="jsde-table-cell"
      >
        6
      </td>
      <td
        class="jsde-table-cell"
      >
        two
      </td>
      <td
        class="jsde-table-cell"
      >
        second
      </td>
    </tr>
  </tbody>
  <tfoot
    class="jsde-table-foot"
  >
    <tr>
      <td>
        <button>
          Load more data...
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;
